# temp-cleaner

./: .gitignore  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: test-compiler-versions.yml
docs/: CMakeLists_8txt.html  annotated.html  app_8cpp.html  app_8cpp__incl.map  app_8cpp__incl.md5  classes.html  classtcleaner_1_1tcleaner-members.html  classtcleaner_1_1tcleaner.html  core_8cpp.html  core_8cpp__incl.map  core_8cpp__incl.md5  core_8hpp.html  core_8hpp__dep__incl.map  core_8hpp__dep__incl.md5  core_8hpp__incl.map  core_8hpp__incl.md5  core_8hpp_source.html  dir_000002_000000.html  dir_27485a52822d67c0b851c71491135667.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  namespaces.html  namespacetcleaner.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  searchdata.js
include/tcleaner/: core.hpp
src/: CMakeLists.txt  app.cpp  core.cpp
test/: IWYU.sh
